# getPage

./: README.md  capture_implementation_plan.md  interface-design.md  llm_cmd_refactoring.md  main.py  pyproject.toml  tool_adaptation_guide.md
.cli-tool/: config.json
cli_base/: main.py
cli_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli_base/commands/: cmd_options.py  config_cmd.py  generic_profile_cmd.py  llm_cmd.py  schema_cmd.py
cli_base/extensibility/: __init__.py  generator.py  llm.py  llm_cmd.py  llm_extension.py
cli_base/utils/: __init__.py  command_registry.py  config.py  context.py  formatting.py  profiles.py
designs & documents/: dynamic_command_support.md  generic_profile_command_generator.md
getPage/: __init__.py  main.py
getPage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
getPage/commands/: cmd_options.py  config_cmd.py  generic_profile_cmd.py  profile_parameter_processor.py  schema_cmd.py
getPage/extensibility/: generator.py  llm_extension.py
getPage/utils/: command_registry.py  config.py  formatting.py  profiles.py  rtsettings.py
